unify the index of examples

--- a/ex1_DP/1.1_dynamic_programming.ipynb
+++ b/ex1_DP/1.1_dynamic_programming.ipynb
@@ -75,40 +75,40 @@
     "  <!-- Row group 1 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"2\">Mountain Car Environment</td>\n",
-    "    <td>Define mountian profile</td>\n",
+    "    <td>Example 1.1: Define mountian profile</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Mountian profile to inclination angle</td>\n",
+    "    <td>Example 1.2: Mountian profile to inclination angle</td>\n",
     "  </tr>\n",
     "\n",
     "  <!-- Row group 2 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"3\">System Dynamics</td>\n",
-    "    <td>Symbolic expression of system dynamics</td>\n",
+    "    <td>Example 2.1: Symbolic expression of system dynamics</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Linearization of system dynamics</td>\n",
+    "    <td>Example 2.2: Linearization of system dynamics</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Discretization of system dynamics</td>\n",
+    "    <td>Example 2.3: Discretization of system dynamics</td>\n",
     "  </tr>\n",
     "\n",
     "  <!-- Row group 3 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"2\">Dynamic Programming (continuous input)</td>\n",
-    "    <td>DPA for continuous input case</td>\n",
+    "    <td>Example 3.1: DPA for continuous input case</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>simulation and visualization</td>\n",
+    "    <td>Example 3.2: Simulation and visualization</td>\n",
     "  </tr>\n",
     "\n",
     "  <!-- Row group 4 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"2\">Dynamic Programming (discrete input)</td>\n",
-    "    <td>DPA for discrete input case</td>\n",
+    "    <td>Example 4.1: DPA for discrete input case</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Simulation and visualization</td>\n",
+    "    <td>Example 4.2: Simulation and visualization</td>\n",
     "  </tr>\n",
     "</table>\n",
     "\n",
@@ -143,7 +143,7 @@
    "source": [
     "----\n",
     "\n",
-    "#### **Part (a): Mountain Car Environment**\n",
+    "#### **Part 1: Mountain Car Environment**\n",
     "\n",
     "\n",
     "In this part, we set up the environment for the mountain car problem. The environment consists of defining the terrain profile, mapping the terrain to inclination angles, and specifying task parameters for the controller. The steps include creating a mathematical representation of the terrain, deriving the relationship between the slope and inclination angle, and finally specifying parameters such as the initial state, terminal state, and constraints to uniquely define a control task.\n"
@@ -154,7 +154,7 @@
    "id": "9ab3f0ea",
    "metadata": {},
    "source": [
-    "**Step 1: The Mountain Profile $h(p)$**\n",
+    "**Example 1.1: The Mountain Profile $h(p)$**\n",
     "\n",
     "The mountain profile describes the height $h$ with reference to horizontal position $p$. As mentioned above, there are different choices for the mountain profile in the mountain car problem. Here we specifically designed 4 cases (as shown in the figure below), where we have 2 linear cases and 2 nonlinear cases:\n",
     "\n",
@@ -226,7 +226,7 @@
    "id": "1c16e26a",
    "metadata": {},
    "source": [
-    "**Step 2: Mapping From Profile $h(p)$ to Inclination Angle $\\theta(p)$**\n",
+    "**Example 1.2: Mapping From Profile $h(p)$ to Inclination Angle $\\theta(p)$**\n",
     "\n",
     "- Transformation function from $h$ to $\\theta$:\n",
     "\n",
@@ -270,7 +270,7 @@
    "id": "fdf273e4",
    "metadata": {},
    "source": [
-    "**Step 3: Environment Parameters and Control Task**\n",
+    "**Example 1.3: Environment Parameters and Control Task**\n",
     "\n",
     "- Task: start from given initial position $p_0$, to reach a given target position $p_T$ (Stabilization)\n",
     "\n",
@@ -331,7 +331,7 @@
    "source": [
     "----\n",
     "\n",
-    "#### **Part (b): System Dynamics**\n",
+    "#### **Part 2: System Dynamics**\n",
     "\n",
     "\n",
     "In the previous section, we defined the mountain car environment, including the terrain profile and the mapping from the profile to the inclination angle. In this section, we define a class that describes the system dynamics of the mountain car on this mountain profile. This includes specifying the state and input vectors, constructing the dynamics equations using symbolic computation in CasADi, and linearization and discretization.\n",
@@ -377,7 +377,7 @@
    "id": "919c51f4",
    "metadata": {},
    "source": [
-    "**Step 1: Setup the Mountain Car Dynamics**\n",
+    "**Example 2.1: Setup the Mountain Car Dynamics**\n",
     "\n",
     "- Hints about defining CasADi symbolic expression: \n",
     "\n",
@@ -435,7 +435,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "**Step 2: Linearizing the System Dynamics**\n",
+    "**Example 2.2: Linearizing the System Dynamics**\n",
     "\n",
     "The derived equations of motion above are typically written in the form of $\\dot{\\boldsymbol{x}} = \\boldsymbol{f}_c (\\boldsymbol{x}, \\boldsymbol{u})$, where $\\boldsymbol{x}$ is the state, $\\boldsymbol{u}$ is the input, and $\\boldsymbol{f}_c: n \\times m \\to n$ denote the mapping from state and input to the derivatives of the state. Generally speaking, the function $\\boldsymbol{f}_c$ is nonlinear, which means the evolution of the system dynamics cannot be captured by simple linear algebraic operations such as matrix multiplication. This significantly increases the complexity of solving the problem. To simplify the problem, especially in the context of local analysis or model-based control (e.g., LQR, MPC), it is a common practice to **linearize** the nonlinear dynamics around a given **operating point**.\n",
     "\n",
@@ -517,7 +517,7 @@
    "id": "57ce05aa",
    "metadata": {},
    "source": [
-    "**Step 3: Discretization of the system dynamics**\n",
+    "**Example 2.3: Discretization of the system dynamics**\n",
     "\n",
     "After linearizing the continuous-time nonlinear system, we obtain a system in the form:\n",
     "\n",
@@ -598,7 +598,7 @@
    "id": "9c8fd4bc",
    "metadata": {},
    "source": [
-    "**Step 4: Arguments for Class 'Dynamics' and Instantiate the Class**\n",
+    "**Example 2.4: Arguments for Class 'Dynamics' and Instantiate the Class**\n",
     "  \n",
     "- Steps: \n",
     "\n",
@@ -640,7 +640,7 @@
    "source": [
     "----\n",
     "\n",
-    "#### **Part (C): Implement the Dynamic Programming-based Controller**\n",
+    "#### **Part 3: Implement the Dynamic Programming-based Controller**\n",
     "\n",
     "**Problem Formulation:**\n",
     "\n",
@@ -711,7 +711,7 @@
    "id": "1362f5f0",
    "metadata": {},
    "source": [
-    "**Step 1: implement the DP algorithm**  \n",
+    "**Example 3.1: implement the DP algorithm**  \n",
     "\n",
     "In this implementation, we use the `SymPy` symbolic computation library to construct a dynamic programming (DP) solution analytically. Symbolic methods allow us to derive explicit expressions for the control policy and cost-to-go function, which can help deepen our understanding of how DP works.\n",
     "\n",
@@ -800,7 +800,7 @@
    "id": "9a437f8d",
    "metadata": {},
    "source": [
-    "**Step 2: bind the defined cost functions and DP algorithm to the class `DPController`**  \n",
+    "Then we can bind the defined cost functions and DP algorithm to the class `DPController`\n",
     "\n",
     "- Steps: \n",
     "\n",
@@ -852,7 +852,7 @@
    "id": "00cca18e",
    "metadata": {},
    "source": [
-    "**Step 3: run the simulation to see the performance of controller**  \n",
+    "**Example 3.2: run the simulation to see the performance of controller**  \n",
     "\n",
     "- Steps: \n",
     "\n",
@@ -887,7 +887,7 @@
    "source": [
     "----\n",
     "\n",
-    "#### **Part (d): Implement the Dynamic Programming-based Controller with bang-bang input**\n",
+    "#### **Part 4: Implement the Dynamic Programming-based Controller with bang-bang input**\n",
     "\n",
     "\n",
     "As introduced at the beginning, optimal control problems come in many variations. The control inputs can be either continuous or discrete, and the problems may involve constraints or be unconstrained. In this section, we extend our symbolic DP implementation to handle **discrete-valued control inputs**, also known as **bang-bang control**. Unlike the previous continuous-input case, where the optimal control input was computed by analytically minimizing the cost function using calculus (first-order optimality conditions), here we **explicitly enumerate** all possible control actions (in this case: $ u_k \\in \\{-0.5, 0.5\\} $) and choose the one with the **lowest resulting cost**. The differences comparing with the previous continuous input DP are summarized as follows:\n",
@@ -955,7 +955,7 @@
    "source": [
     "\n",
     "\n",
-    "**Step 1: implement the DP algorithm with bang-bang input**  \n",
+    "**Example 4.1: implement the DP algorithm with bang-bang input**  \n",
     "\n",
     "\n",
     "The updated `setup_external()` function in the `DPController` class performs similar steps as before to compute a symbolic DP solution with discrete inputs. Most of the structure remains unchanged: symbolic variables are defined for the state and control, cost weights are converted to symbolic form, and the terminal cost is initialized at the final time step."
@@ -1046,7 +1046,7 @@
    "id": "95ff95fe",
    "metadata": {},
    "source": [
-    "**Step 2: bind the defined cost functions and DP algorithm to the class `DPController`**  \n",
+    "Then we can bind the defined cost functions and DP algorithm to the class `DPController`\n",
     "\n",
     "- Steps: \n",
     "\n",
@@ -1109,7 +1109,7 @@
    "id": "69f46006",
    "metadata": {},
    "source": [
-    "**Step 3: run the simulation to see the performance of controller**  \n",
+    "**Example 4.2: run the simulation to see the performance of controller**  \n",
     "\n",
     "- Steps: \n",
     "\n",
