--- a/ex2_LQR/2.1_linear_quadratic_regulator.ipynb
+++ b/ex2_LQR/2.1_linear_quadratic_regulator.ipynb
@@ -26,34 +26,34 @@
     "  <!-- Row group 1 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"2\">Finite-horizon LQR</td>\n",
-    "    <td>implement the finite-horizon LQR controller using bellman recursion</td>\n",
+    "    <td>Example 1.1: Finite-horizon LQR Implementation </td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>simulation and visualization</td>\n",
+    "    <td>Example 1.2: Simulation and visualization</td>\n",
     "  </tr>\n",
     "\n",
     "  <!-- Row group 2 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"2\">Infinite-horizon LQR</td>\n",
-    "    <td>implement the infinite-horizon LQR controller using bellman equation</td>\n",
+    "    <td>Example 2.1: Infinite-horizon LQR Implementation</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>simulation and visualization</td>\n",
+    "    <td>Example 2.2: Simulation and visualization</td>\n",
     "  </tr>\n",
     "\n",
     "  <!-- Row group 3 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"1\">Influence of hyperparameters in LQR</td>\n",
-    "    <td>analyze the impact of adjusting the weight matrices on system behavior.</td>\n",
+    "    <td>Example 3.1: Impact of the weight matrices on system behavior</td>\n",
     "  </tr>\n",
     "\n",
     "  <!-- Row group 4 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"2\">Limitations of LQR</td>\n",
-    "    <td>Limitation 1: linear dynamics and quadratic cost</td>\n",
+    "    <td>Example 4.1: linear dynamics and quadratic cost</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Limitation 2: not accounting for constraints</td>\n",
+    "    <td>Example 4.2:  not accounting for constraints</td>\n",
     "  </tr>\n",
     "\n",
     "</table>\n",
@@ -162,7 +162,7 @@
    "source": [
     "---\n",
     "\n",
-    "### **Part (a): finite-horizon discrete-time LQR controller**\n",
+    "### **Part 1: finite-horizon discrete-time LQR controller**\n",
     "\n",
     "In this section, we will provide the implementation of the finite horizon LQR controller and demonstrate how it can be applied to a specific task (stabilization task). "
    ]
@@ -245,7 +245,7 @@
    "id": "208c4ff2",
    "metadata": {},
    "source": [
-    "**Step 1: implement the finite horizon LQR controller**  \n",
+    "**Example 1.1: implement the finite horizon LQR controller**  \n",
     "\n",
     "In this step, we will implement the setup function `setup_external()`, which will be automatically called in the constructor of class `FiniteLQRController`. The implementation will follow three key steps:\n",
     "\n",
@@ -299,7 +299,7 @@
    "id": "af7781a9",
    "metadata": {},
    "source": [
-    "**Step 2: Bind the defined setup function to the class \"FiniteLQRController\", and run the simulation to see the performance of controller**  \n",
+    "**Example 1.2: Bind the defined setup function to the class \"FiniteLQRController\", and run the simulation to see the performance of controller**  \n",
     "\n",
     "1\\) Bind the defined setup function for DP algorithm `setup_external()` to class `FiniteLQRController`;\n",
     "\n",
@@ -366,7 +366,7 @@
    "source": [
     "---\n",
     "\n",
-    "### **Part (b): infinite-horizon discrete-time LQR controller**\n",
+    "### **Part 2: infinite-horizon discrete-time LQR controller**\n",
     "\n",
     "While the finite-horizon LQR offers greater flexibility by incorporating terminal costs and producing time-varying control gains, it suffers from a key limitation: the solution can only be computed via backward recursion. As a result, the entire control policy must be precomputed before execution, making it unsuitable for online adaptation in most practical scenarios. In this section, we will provide the implementation of the LQR controller and demonstrate how it can be applied to a specific task (stabilization task). We will also show the resulting performance and the effects of using the LQR controller in achieving optimal control.\n"
    ]
@@ -416,7 +416,7 @@
    "id": "f38d49cc",
    "metadata": {},
    "source": [
-    "**Step 1: implement the infinite horizon LQR controller**  \n",
+    "**Example 2.1: implement the infinite horizon LQR controller**  \n",
     "\n",
     "In this step, we will implement the setup function `setup_external()`, which will be automatically called in the constructor of class `LQRController`. The implementation will follow three key steps:\n",
     "\n",
@@ -465,7 +465,7 @@
    "id": "770e6160",
    "metadata": {},
    "source": [
-    "**Step 2: Bind the defined setup function to the class \"LQRController\", and run the simulation to see the performance of controller**  \n",
+    "**Example 2.2: Bind the defined setup function to the class \"LQRController\", and run the simulation to see the performance of controller**  \n",
     "\n",
     "1\\) Bind the defined setup function for DP algorithm `setup_external()` to class `LQRController`;\n",
     "\n",
@@ -535,7 +535,7 @@
    "id": "0b1beff2",
    "metadata": {},
    "source": [
-    "### **Part (C): Influence of the Weight Matrix on LQR Performance**\n",
+    "### **Part 3: Influence of the Weight Matrix on LQR Performance**\n",
     "\n",
     "In this section, we will analyze how the choice of weight matrices in the cost function affects the performance of the LQR controller. By tuning the weight matrices $\\boldsymbol{Q}$ (which penalize deviations in state) while keeping $\\boldsymbol{R}$ (which penalizes control input) fixed, we can observe how the system behaves under different control strategies.\n",
     "\n",
@@ -615,7 +615,7 @@
    "id": "7c96c949",
    "metadata": {},
    "source": [
-    "### **Part (D): Limitations of the LQR Controller**\n",
+    "### **Part 4: Limitations of the LQR Controller**\n",
     "\n",
     "At last, we want to emphasize the limitations of LQR: \n",
     "\n",
@@ -634,7 +634,7 @@
    "id": "647fedbb",
    "metadata": {},
    "source": [
-    "#### **1. Linear vs. Nonlinear Dynamics**\n",
+    "#### **Example 4.1: Linear vs. Nonlinear Dynamics**\n",
     "\n",
     "LQR is designed based on linear system dynamics. However, real-world physical systems are often inherently nonlinear. If we directly apply an LQR controller to such nonlinear systems, what would happen? Will the controller still be able to achieve the control objectives, or will it completely fail to work? In this section, we will present simulation results under different scenarios to explore and discuss these questions.\n",
     "\n",
@@ -663,7 +663,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "##### **Example 1: linearize around the flat ground, drive the car from the top to the valley**\n",
+    "##### **Case 1: linearize around the flat ground, drive the car from the top to the valley**\n",
     "\n",
     "Let us first consider a relatively simple case: the car starts from flat ground and attempts to stabilize at the bottom of the valley under the action of the LQR control law, which implies that:\n",
     "\n",
@@ -717,7 +717,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "##### **Example 2: linearize around the flat ground, drive the car from the valley to the top**\n",
+    "##### **Case 2: linearize around the flat ground, drive the car from the valley to the top**\n",
     "\n",
     "Let us slightly increase the difficulty of the task: while still choosing the flat ground as the linearization point, we attempt to use the LQR control law to drive the car from the bottom of the valley toward the right hilltop. The parameters can be set according to the following values:\n",
     "\n",
@@ -765,7 +765,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "##### **Example 3: linearize around a point on the slope, drive the car from the valley to the top**\n",
+    "##### **Case 3: linearize around a point on the slope, drive the car from the valley to the top**\n",
     "\n",
     "Based on the simulation results of Example 2, we attempt to make some adjustments to the linearization point to observe how it affects the system's response. We move the linearization point to a point on the slope, which implies that:\n",
     "\n",
@@ -876,7 +876,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "#### **2. Effect of Input Constraints on LQR Performance**\n",
+    "#### **Example 4.2: Effect of Input Constraints on LQR Performance**\n",
     "\n",
     "LQR is formulated under the assumption of **unconstrained inputs**, meaning it does not inherently support input saturation or upper/lower constraints. However, in real-world systems, control inputs such as force, torque, or voltage often have physical limits. When the LQR controller generates control inputs exceeding these limits, the inputs will be **clipped** to the boundaries. This behavior can cause saturation between the actual system trajectory and the ideal trajectory predicted by the LQR controller.\n",
     "\n",
