--- a/ex3_OPT/3.1_optimization_fundamentals.ipynb
+++ b/ex3_OPT/3.1_optimization_fundamentals.ipynb
@@ -40,16 +40,16 @@
     "    <td>Example 2.2: Solving QPs with Built-in Solvers</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Example 3.1: Manual Sequential QP Solver Implementation</td>\n",
+    "    <td>Example 2.3: Manual Sequential QP Solver Implementation</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Example 3.2: Using Implemented SQP Solver for Nonlinear Programming</td>\n",
+    "    <td>Example 2.4: Using Implemented SQP Solver for Nonlinear Programming</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Example 3.3: Configuring Built-in SQP Solvers for NLP</td>\n",
+    "    <td>Example 2.5: Configuring Built-in SQP Solvers for NLP</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Example 3.4: Using Built-in SQP Solver for NLP</td>\n",
+    "    <td>Example 2.6: Using Built-in SQP Solver for NLP</td>\n",
     "  </tr>\n",
     "\n",
     "</table>\n",
@@ -115,7 +115,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "### **Part (a): Unconstrained Optimization**\n",
+    "### **Part 1: Unconstrained Optimization**\n",
     "\n",
     "In this section, we introduce methods for solving unconstrained optimization problems. We begin by defining several common objective functions as testbeds for solvers. Afterwards we implement these solvers and evaluate their performance on the test problems and summarize the characteristics of different optimization methods.\n",
     "\n",
@@ -903,7 +903,7 @@
    "id": "471f5c42",
    "metadata": {},
    "source": [
-    "### **Part (b): Constrained Optimization**\n",
+    "### **Part 2: Constrained Optimization**\n",
     "\n",
     "As introduced above, a constrained optimization problem has the form:\n",
     "\n",
@@ -1249,7 +1249,7 @@
    "id": "3fa1cb8e",
    "metadata": {},
    "source": [
-    "#### **Example 3.1: Manual Sequential QP Solver Implementation**  \n",
+    "#### **Example 2.3: Manual Sequential QP Solver Implementation**  \n",
     "\n",
     "Sequential Quadratic Programming (SQP) is a widely used iterative method for solving NLP problems. The core idea of SQP is to approximate the NLP at each iteration with a quadratic programming (QP) subproblem, which captures the local curvature of the objective and constraints. The solution to this QP subproblem provides a search direction for updating the decision variables.\n",
     "\n",
@@ -1608,7 +1608,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "##### **Example 3.2: Using Implemented SQP Solver for Nonlinear Programming**\n",
+    "##### **Example 2.4: Using Implemented SQP Solver for Nonlinear Programming**\n",
     "\n",
     "1\\) Specify the objective function as follows;\n",
     "\n",
@@ -1675,7 +1675,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "##### **Example 3.3: Configuring Built-in SQP Solvers for NLP**\n",
+    "##### **Example 2.5: Configuring Built-in SQP Solvers for NLP**\n",
     "\n",
     "In the previous section, we introduced the SQP method and provided a custom implementation that manually performs linearizations, constructs QP subproblems, and iteratively updates the solution. While such an implementation is valuable for understanding the inner workings of SQP and customizing its behavior, in practical applications it is often more convenient to leverage existing optimization libraries.\n",
     "\n",
@@ -1880,7 +1880,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "##### **Example 3.4: Using Built-in SQP Solver for NLP**\n",
+    "##### **Example 2.6: Using Built-in SQP Solver for NLP**\n",
     "\n",
     "1\\) Specify the objective function as follows;\n",
     "\n",
