--- a/ex4_iLQR/4.1_iterative_linear_quadratic_regulator.ipynb
+++ b/ex4_iLQR/4.1_iterative_linear_quadratic_regulator.ipynb
@@ -23,22 +23,22 @@
     "  <!-- Row group 2 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"2\">Iterative LQR</td>\n",
-    "    <td>Iterative LQR Implementation</td>\n",
+    "    <td>Example 1.1: Iterative LQR Implementation</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Simulation and Visualization</td>\n",
+    "    <td>Example 1.2: Simulation and Visualization</td>\n",
     "  </tr>\n",
     "\n",
     "  <!-- Row group 4 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"3\">ILQR's Properties</td>\n",
-    "    <td>Relationship between LQR and ILQR</td>\n",
+    "    <td>Example 2.1: Relationship between LQR and ILQR</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>ILQR's Optimality</td>\n",
+    "    <td>Example 2.2: ILQR's Optimality</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Limitations of ILQR</td>\n",
+    "    <td>Example 2.3: Limitations of ILQR</td>\n",
     "  </tr>\n",
     "\n",
     "</table>\n",
@@ -155,7 +155,7 @@
    "id": "7993c0d4",
    "metadata": {},
    "source": [
-    "### **Part (a): Iterative LQR Implementation**\n",
+    "### **Part 1: Iterative LQR Implementation**\n",
     "\n",
     "In this section, we will provide the implementation of the iterative LQR and demonstrate how it can be applied to a specific task (stabilization task). We will also show the resulting performance and the effects of using the ILQR controller in achieving optimal control.\n",
     "\n",
@@ -332,7 +332,7 @@
    "id": "f38d49cc",
    "metadata": {},
    "source": [
-    "##### **Step 1: Define the setup function for ILQR**  \n",
+    "##### **Example 1.1: Define the setup function for ILQR**  \n",
     "\n",
     "In this step, we will implement the setup function `setup_external()`, which will be manually called after a initial trajectory is obtained using LQR. For each iteration, you need to:\n",
     "\n",
@@ -474,7 +474,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "##### **Step 2: Bind the setup function to the class \"ILQRController\", and run the simulation to see the performance**  \n",
+    "##### **Example 1.2: Bind the setup function to the class \"ILQRController\", and run the simulation to see the performance**  \n",
     "\n",
     "1\\) Bind the defined setup function `setup_external()` to class `ILQRController`;\n",
     "\n",
@@ -571,7 +571,7 @@
    "id": "ad86082b",
    "metadata": {},
    "source": [
-    "### **Part (C): LQR vs. ILQR**\n",
+    "### **Part 2: LQR vs. ILQR**\n",
     "\n",
     "In this section, we will explore several aspects of how the ILQR algorithm compares to the LQR algorithm. We will begin by examining the relationship between LQR and ILQR under both linear and nonlinear system dynamics. Then we will delve deeper into the advantages of ILQR especially in the nonlinear case and provide visualizations to enhance understanding.  \n",
     "\n",
@@ -585,7 +585,7 @@
    "source": [
     "\n",
     "\n",
-    "#### **1. Relationship between LQR and ILQR**\n",
+    "#### **Example 2.1. Relationship between LQR and ILQR**\n",
     "\n",
     "We will explore the relationship between LQR and ILQR through a comparative study. We design two test cases:  \n",
     "\n",
@@ -717,9 +717,7 @@
     "\n",
     "#### **Main Conclusion:**\n",
     "\n",
-    "Compared to the LQR algorithm, this iterative procedure allows for finding a locally optimal policy that is no longer captured by classical LQR. In this sense, ILQR serves as a more general framework, reducing to LQR in the simpler linear-quadratic case but extending to broader classes of nonlinear systems and costs.\n",
-    "\n",
-    "----"
+    "Compared to the LQR algorithm, this iterative procedure allows for finding a locally optimal policy that is no longer captured by classical LQR. In this sense, ILQR serves as a more general framework, reducing to LQR in the simpler linear-quadratic case but extending to broader classes of nonlinear systems and costs.\n"
    ]
   },
   {
@@ -729,7 +727,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "#### **2. How does ILQR outperform LQR in a nonlinear case?**\n",
+    "#### **Example 2.2. How does ILQR outperform LQR in a nonlinear case?**\n",
     "\n",
     "In the last section we have already seen that LQR is a special case of ILQR. For nonlinear problems, ILQR will lead to a more optimal policy compared to the LQR controller. The optimality here is subject to the optimizatioin problem, which is determined by all the components (dynamcis, cost, and constraints). In this section, we provide you with some quantitative results to further address this consequece. You need to:  \n",
     "\n",
@@ -796,10 +794,7 @@
     "#### **Results Analysis**\n",
     "\n",
     "From the results, we observe that in the case of nonlinear dynamics, the policy computed by ILQR yields a lower cost-to-go compared to the LQR policy, indicating a more optimal solution. This is because ILQR better accounts for system nonlinearity during the optimization process, rather than relying on a single linearization around a reference point.\n",
-    "\n",
-    "----\n",
-    "\n",
-    "<br>"
+    "\n"
    ]
   },
   {
@@ -807,7 +802,9 @@
    "id": "61c6fa53",
    "metadata": {},
    "source": [
-    "#### **3. Limitations of ILQR**\n",
+    "<br>\n",
+    "\n",
+    "#### **Example 2.3. Limitations of ILQR**\n",
     "\n",
     "This section illustrates several limitations of the ILQR algorithm, particularly its sensitivity to the choice of the initial trajectory. Although ILQR performs iterative refinement, an ill-conditioned initialization may lead to divergence or failure.\n"
    ]
