--- a/ex5_MPC/5.1_model_predictive_control_part1.ipynb
+++ b/ex5_MPC/5.1_model_predictive_control_part1.ipynb
@@ -28,46 +28,46 @@
     "  <!-- Row group 1 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"2\">Open-Loop</td>\n",
-    "    <td>Example 1: Cost Designs in Optimal Control</td>\n",
+    "    <td>Example 1.1: Cost Designs in Optimal Control</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Example 2: Open-Loop Limitations</td>\n",
+    "    <td>Example 1.2: Open-Loop Limitations</td>\n",
     "  </tr>\n",
     "\n",
     "  <!-- Row group 2 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"4\">Linear MPC</td>\n",
-    "    <td>Task 1: Linear MPC Implementation</td>\n",
+    "    <td>Example 2.1: Linear MPC Implementation</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Task 2: Simulation and Visualization</td>\n",
+    "    <td>Example 2.2: Simulation and Visualization</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Task 3: Horizon and Terminal Components</td>\n",
+    "    <td>Example 2.3: Horizon and Terminal Components</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Task 4: LMPC vs. LQR</td>\n",
+    "    <td>Example 2.4: LMPC vs. LQR</td>\n",
     "  </tr>\n",
     "\n",
     "  <!-- Row group 3 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"4\">Nonlinear MPC</td>\n",
-    "    <td>Task 1: Solver Configuration</td>\n",
+    "    <td>Example 3.1: Solver Configuration</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Task 2: Control Loop Definition</td>\n",
+    "    <td>Example 3.2: Control Loop Definition</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Task 3: Simulation and Visualization</td>\n",
+    "    <td>Example 3.3: Simulation and Visualization</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Task 4: NMPC vs. ILQR</td>\n",
+    "    <td>Example 3.4: NMPC vs. ILQR</td>\n",
     "  </tr>\n",
     "\n",
     "  <!-- Row group 4 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"1\">Hyperparameter Selection</td>\n",
-    "    <td>Example: Prediction Horizon</td>\n",
+    "    <td>Example 4.1: Prediction Horizon</td>\n",
     "  </tr>\n",
     "\n",
     "</table>\n",
@@ -180,7 +180,7 @@
     "\n",
     "----\n",
     "\n",
-    "### **Part (a): Open-Loop**\n",
+    "### **Part 1: Open-Loop**\n",
     "\n",
     "We first consider a simple constrained open-loop optimal control problem (OCP), which is solved offline over the entire time horizon by formulating and optimizing a quadratic (or more generally, nonlinear) programming problem to obtain the input sequence that minimizes a given objective function:\n",
     "\n",
@@ -256,7 +256,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "#### **Example 1: Cost Designs in Optimal Control**  \n",
+    "#### **Example 1.1: Cost Designs in Optimal Control**  \n",
     "\n",
     "Apart from the standard quadratic cost (2-norm), one can also use different norms, such as the 1-norm or infinity-norm, to achieve different control characteristics. These alternative cost designs lead to different system behavior and are particularly useful when specific structural or robustness properties are desired. \n",
     "\n",
@@ -403,7 +403,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "#### **Example 2: Open-Loop Limitations** \n",
+    "#### **Example 1.2: Open-Loop Limitations** \n",
     "\n",
     "One advantage of the open-loop algorithm is that it allows for offline pre-computation. However, it also has several limitations:\n",
     "\n",
@@ -554,7 +554,7 @@
     "\n",
     "----\n",
     "\n",
-    "### **Part (b): Linear MPC**\n",
+    "### **Part 2: Linear MPC**\n",
     "\n",
     "\n",
     "In this section, we present the implementation of **model predictive control (MPC)** for linear systems. We begin with a simple case where the system dynamics are assumed to be **linear time-invariant in discrete time** (LTI-DT). This special case is commonly referred to as **linear MPC (LMPC)**.\n",
@@ -738,7 +738,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "#### **Task 1: Linear MPC Implementation**\n",
+    "#### **Example 2.1: Linear MPC Implementation**\n",
     "\n",
     "In this step, we implement the core logic of a linear MPC based on a standard **QP** formulation using the **lifted form** and solved via the `cvxopt` solver. This implementation assumes that the system dynamics are linear time-invariant (LTI), and it expresses the full finite-horizon optimal control problem as a single constrained quadratic program.\n",
     "\n",
@@ -966,7 +966,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "#### **Task 2: Simulation and Visualization**  \n",
+    "#### **Example 2.2: Simulation and Visualization**  \n",
     "\n",
     "1\\) Specify the arguments and instantiate the controller class `LinearMPCController` as `LMPC`; \n",
     "\n",
@@ -1022,7 +1022,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "#### **Task 3: Horizon and Terminal Components**  \n",
+    "#### **Example 2.3: Horizon and Terminal Components**  \n",
     "\n",
     "In this section, we explore the effect of MPC hyperparameters on the overall control performance. Refer to the following instructions to run the simulations and analyze the results."
    ]
@@ -1175,7 +1175,7 @@
    "id": "cab289ea",
    "metadata": {},
    "source": [
-    "#### **Task 4: LMPC vs. LQR**  \n",
+    "#### **Example 2.4: LMPC vs. LQR**  \n",
     "\n",
     "In this section, we compare linear MPC and LQR from Chapter 2. For LQR, explicit constraint handling is not supported. Therefore, we mimic the \"clipping\" behavior observed in physical systems — if the computed control input exceeds the allowed bounds, it is truncated to stay within the specified limits. In contrast, the MPC controller supports direct incorporation of constraints, allowing us to explicitly define input and state bounds during optimization.\n",
     "\n",
@@ -1302,7 +1302,7 @@
     "\n",
     "----\n",
     "\n",
-    "### **Part (c): Nonlinear MPC**\n",
+    "### **Part 3: Nonlinear MPC**\n",
     "\n",
     "In this section, we will provide the implementation of nonlinear MPC (NMPC) and demonstrate how it can be applied to a stabilization task. We will also visualize the performance of the implemented NMPC.\n"
    ]
@@ -1449,7 +1449,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "#### **Task 1: Solver Configuration**  \n",
+    "#### **Example 3.1: Solver Configuration**  \n",
     "\n",
     "In this step, we will implement the setup function `setup_external()`, which will be automatically called in the constructor of class `MPCController`. We use Acados as the solver for our MPC problem, which offers a rich Python interface for defining and solving optimization problems. The Python interface of Acados allows users to describe the dynamics, cost, and constraints symbolically. It then handles code generation, compilation, and solver setup internally, enabling fast and efficient online optimization. The implementation will follow three key steps:\n",
     "\n",
@@ -1603,7 +1603,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "#### **Task 2: Control Loop Definition**  \n",
+    "#### **Example 3.2: Control Loop Definition**  \n",
     "\n",
     "After defining the optimization problem using Acados' Python interface and generating the corresponding solver package, we need to assign values to variables and compute the control output in each control cycle. This process will be encapsulated in a control loop function `compute_action_external()`, which is called at every time step. In each cycle, you need to:\n",
     "\n",
@@ -1679,7 +1679,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "#### **Task 3: Simulation and Visualization**  \n",
+    "#### **Example 3.3: Simulation and Visualization**  \n",
     "\n",
     "1\\) Bind the defined setup function `setup_external()` and control loop function `compute_action_external()` to class `MPCController`;\n",
     "\n",
@@ -1750,7 +1750,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "#### **Task 4: NMPC vs. ILQR**  \n",
+    "#### **Example 3.4: NMPC vs. ILQR**  \n",
     "\n",
     "In the following, we compare the performance of NMPC (Model Predictive Control for nonlinear systems) with the ILQR implementation introduced in Chapter 4. To this end, we introduce the following set of constraints:\n",
     "\n",
@@ -1885,7 +1885,7 @@
     "\n",
     "----\n",
     "\n",
-    "### **Part (d): Hyperparameter Selection**\n",
+    "### **Part 4: Hyperparameter Selection**\n",
     "\n",
     "The main hyperparameters in MPC include the prediction horizon $N$, sampling frequency $f$, and weighting matrices $\\boldsymbol{Q}$, $\\boldsymbol{R}$, and $\\boldsymbol{Q}_f$, etc. The influence of these hyperparameters are as follows:\n",
     "\n",
@@ -1901,7 +1901,7 @@
    "id": "3ecd5ec0",
    "metadata": {},
    "source": [
-    "##### **Example: Prediction Horizon**\n",
+    "##### **Example 4.1: Prediction Horizon**\n",
     "\n",
     "As discussed in Chapter 2, the impact of the weight matrices on the performance of MPC has been well-established. The prediction horizon $N$, as another important and unique hyperparameter in the MPC algorithm, similarly plays a crucial role. Therefore, in this section, we will focus on exploring the impact of the horizon length on the performance of the MPC algorithm.\n",
     "\n",
