--- a/ex5_MPC/5.2_model_predictive_control_part2.ipynb
+++ b/ex5_MPC/5.2_model_predictive_control_part2.ipynb
@@ -29,25 +29,25 @@
     "  <!-- Row group 1 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"3\">MPC for Reference Tracking</td>\n",
-    "    <td>Example 1: Tracking MPC Implementation</td>\n",
+    "    <td>Example 1.1: Tracking MPC Implementation</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Example 2: Simulation and Visualization</td>\n",
+    "    <td>Example 1.2: Simulation and Visualization</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Example 3: MPC for Stabilization vs. MPC for Tracking</td>\n",
+    "    <td>Example 1.3: MPC for Stabilization vs. MPC for Tracking</td>\n",
     "  </tr>\n",
     "\n",
     "  <!-- Row group 2 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"3\">Robust MPC (RMPC)</td>\n",
-    "    <td>Example 1: RMPC Implementation</td>\n",
+    "    <td>Example 2.1: RMPC Implementation</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Example 2: Robust Invariant Set and Phase Portrait for RMPC</td>\n",
+    "    <td>Example 2.2: Robust Invariant Set and Phase Portrait for RMPC</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Example 3: Simulation and Visualization</td>\n",
+    "    <td>Example 2.3: Simulation and Visualization</td>\n",
     "  </tr>\n",
     "\n",
     "</table>\n",
@@ -115,7 +115,7 @@
     "\n",
     "----\n",
     "\n",
-    "### **Part (a): MPC for Reference Tracking**\n",
+    "### **Part 1: MPC for Reference Tracking**\n",
     "\n",
     "So far we have limited our discussion on MPC to the case of stabilization. However, in many applications, we want our system to track a given trajectory instead of stabilizing the system at the origin. In the following, we will briefly look at the case of tracking a reference trajectory using MPC. \n",
     "\n",
@@ -171,7 +171,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "#### **Example 1: Tracking MPC Implementation**\n",
+    "#### **Example 1.1: Tracking MPC Implementation**\n",
     "\n",
     "Based on the tracking MPC formulation introduced earlier, we now present the corresponding controller implementation. Compared to the MPC for stabilization tasks, the tracking MPC shares the same structural formulation of the optimization problem. As a result, the `setup` function does not require any modification. In the following, we provide only the updated control loop to reflect the specific problem setting of tracking MPC. In each cycle, you need to:\n",
     "\n",
@@ -253,7 +253,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "#### **Example 2: Simulation and Visualization**  \n",
+    "#### **Example 1.2: Simulation and Visualization**  \n",
     "\n",
     "1\\) Subtitute the function `compute_action` in predefined class `TrackingMPCController` with our external control loop `compute_action_external`;\n",
     "\n",
@@ -349,7 +349,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "#### **Example 3: MPC for Stabilization vs. MPC for Tracking**\n",
+    "#### **Example 1.3: MPC for Stabilization vs. MPC for Tracking**\n",
     "\n",
     "After implementing the tracking MPC controller, we now return to one of the questions raised at the very beginning: Which hyperparameters affect MPC performance, and in what way? In Part 1, we have already discussed this question in the context of MPC for stabilization. The most influential hyperparameters include:\n",
     "\n",
@@ -607,7 +607,7 @@
     "\n",
     "----\n",
     "\n",
-    "### **Part (b): Robust MPC**\n",
+    "### **Part 2: Robust MPC**\n",
     "\n",
     "So far, we have considered MPC formulations under the assumption that the system dynamics are perfectly known and that there are no disturbances affecting the system. However, in many real-world applications, such assumptions rarely hold: model uncertainties, external disturbances, and unmodeled dynamics often degrade controller performance or even cause constraint violations. To address these challenges, we now turn to Robust Model Predictive Control (Robust MPC) — a class of methods designed to ensure constraint satisfaction and stability even in the presence of bounded disturbances or model-mismatches.\n",
     "\n",
@@ -726,7 +726,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "#### **Example 1: RMPC Implementation**  \n",
+    "#### **Example 2.1: RMPC Implementation**  \n",
     "\n",
     "In this section, we introduce how to implement an RMPC controller class. As before, we use `Acados` as the underlying solver. However, prior to calling the solver, we need to recursively compute the Robust Invariant Set starting from the disturbance set $\\mathcal{D}$. For this step, we use the `pytopes` package, which provides basic polytope operations such as **affine mapping** and **Minkowski sums**. The implementation will follow three key steps:\n",
     "\n",
@@ -1072,7 +1072,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "#### **Example 2: Robust Invariant Set and Phase Portrait for RMPC**  \n",
+    "#### **Example 2.2: Robust Invariant Set and Phase Portrait of RMPC**  \n",
     "\n",
     "One of the key features that distinguishes Robust MPC (RMPC) from standard MPC is its explicit consideration of worst-case disturbances in the control design. To ensure robust constraint satisfaction under all allowable disturbances, RMPC requires the computation of a **Robust Invariant Set (RIS)** — a set of states from which the system can be kept within constraints, regardless of disturbance realizations.\n",
     "\n",
@@ -1175,7 +1175,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "#### **Example 3: Simulation and Visualization**  \n",
+    "#### **Example 2.3: Simulation and Visualization**  \n",
     "\n",
     "Here, we instantiate the previously implemented RMPC class and apply it to a concrete control problem to evaluate its performance.\n",
     "\n",
