--- a/ex6_SysID/6.2_Learning_Based_MPC.ipynb
+++ b/ex6_SysID/6.2_Learning_Based_MPC.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "  <!-- Row group 2 -->\n",
     "  <tr>\n",
-    "    <td rowspan=\"2\">Part 1: Baselines without Uncertainty Handling</td>\n",
+    "    <td rowspan=\"2\">Baselines without Uncertainty Handling</td>\n",
     "    <td>Example 1.1: Baseline MPC under Perfect Model Assumption</td>\n",
     "  </tr>\n",
     "  <tr>\n",
@@ -43,13 +43,13 @@
     "\n",
     "  <!-- Row group 3 -->\n",
     "  <tr>\n",
-    "    <td rowspan=\"1\">Part 2: Deterministic Model Learning and Control</td>\n",
+    "    <td rowspan=\"1\">Deterministic Model Learning and Control</td>\n",
     "    <td>Example 2.1: MPC with Learned Deterministic Model from Data</td>\n",
     "  </tr>\n",
     "\n",
     "  <!-- Row group 4 -->\n",
     "  <tr>\n",
-    "    <td rowspan=\"2\">Part 3: Probabilistic Model Learning and Control</td>\n",
+    "    <td rowspan=\"2\">Probabilistic Model Learning and Control</td>\n",
     "    <td>Example 3.1: Robust MPC with Flat Model and Bounded Uncertainty</td>\n",
     "  </tr>\n",
     "  <tr>\n",
