--- a/ex7_RL/7.1_mbrl.ipynb
+++ b/ex7_RL/7.1_mbrl.ipynb
@@ -23,7 +23,7 @@
     "  <!-- Row group 1 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"2\">Discretization I</td>\n",
-    "    <td>Nearest Neighbor</td>\n",
+    "    <td>Example 1.1: Nearest Neighbor Approach</td>\n",
     "  </tr>\n",
     "  <tr>\n",
     "  </tr>\n",
@@ -31,10 +31,10 @@
     "  <!-- Row group 2 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"4\">Value Iteration</td>\n",
-    "    <td>Task 1: Linear Case</td>\n",
+    "    <td>Example 2.1: Linear Case</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Task 2: Nonlinear Case</td>\n",
+    "    <td>Example 2.2: Nonlinear Case</td>\n",
     "  </tr>\n",
     "  <tr>\n",
     "  </tr>\n",
@@ -44,7 +44,7 @@
     "  <!-- Row group 3 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"2\">Discretization II</td>\n",
-    "    <td>Linear Interpolation</td>\n",
+    "    <td>Example 3.1:Linear Interpolation Approach</td>\n",
     "  </tr>\n",
     "  <tr>\n",
     "  </tr>\n",
@@ -52,7 +52,7 @@
     "  <!-- Row group 4 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"4\">Policy Iteration</td>\n",
-    "    <td>Task 1: Nonlinear Case</td>\n",
+    "    <td>Example 4.1: Nonlinear Case</td>\n",
     "  </tr>\n",
     "  <tr>\n",
     "  </tr>\n",
@@ -64,7 +64,7 @@
     "  <!-- Row group 4 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"1\">Comparison</td>\n",
-    "    <td>Model-Based RL vs. NMPC</td>\n",
+    "    <td>Example 5.1: Model-Based RL vs. NMPC</td>\n",
     "  </tr>\n",
     "\n",
     "</table>\n",
@@ -230,8 +230,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Discretization I\n",
-    "### **Discretizing State and Input Spaces**\n",
+    "----\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### **Part 1: Discretization I, Nearest Neighbour Appraoch**\n",
     "\n",
     "A Markov decision process (MDP), is the main assumption in RL. An MDP is the tuple $(\\mathcal{X}, \\mathcal{U}, p, r)$, where $\\mathcal{X}$ is the discrete set of states, $\\mathcal{U}$ is the discrete set of actions (can be state-dependent), $p$ describes the transition probabilities (conditional probability on the next state $x'$ given a state $x$ and an action $u$: $p(x' \\vert x, u)$), and $r$ represents the reward for each transition with $r(x, u, x')$.  \n",
     "\n",
@@ -501,7 +504,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Value Iteration\n",
+    "----\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### **Part 2: Value Iteration**\n",
     "\n",
     "After setting up the MDP, the common interface to any RL algorithm, we now apply the standard RL algorithms, value and policy iteration to this MDP.  We begin with the value iteration algorithm. The implementation directly follows the lecture notes. To prevent infinite loops, we limit the maximum number of iterations. "
    ]
@@ -573,7 +580,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Task 1: Linear Case\n",
+    "<br>\n",
+    "\n",
+    "#### **Example 2.1: Linear Case**\n",
+    "\n",
     "Now everything is set up for running the value iteration algorithm. For fine discretizations this can take some time. "
    ]
   },
@@ -695,7 +705,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Task 2: Nonlinear Case\n",
+    "<br>\n",
+    "\n",
+    "#### **Example 2.2: Nonlinear Case**\n",
+    "\n",
     "The above task was relatively simple and the linear methods, like LQR, were already able to solve such tasks. Therefore, the question becomes: How does this transfer to more challenging tasks? For the rest of the notebook, we are considering the case of the valley environment. We set up the new environment (using the previous constraints and target state). "
    ]
   },
@@ -787,9 +800,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Discretization II\n",
+    "----\n",
     "\n",
-    "### Linear Interpolation\n",
+    "<br>\n",
+    "\n",
+    "### **Part 3: Discretization II, Linear Interpolation Approach**\n",
     "\n",
     "Since the nearest neighbor approach did not stabilize the system on top of the hill, we turn to a different scheme to generate an MDP from a system with continuous dynamics, state, and inputs. \n",
     "\n",
@@ -913,7 +928,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Policy Iteration\n",
+    "----\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### **Part 4: Policy Iteration**\n",
     "\n",
     "The Bellman equation can be used to derive different algorithms to find the optimal value function and policy. Another algorithm is the policy iteration algorithm. Following the lecture notes, the algorithm is implmented in the following cell. "
    ]
@@ -997,13 +1016,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Task 1: Nonlinear Case"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "<br>\n",
+    "\n",
+    "#### **Example 4.1: Nonlinear Case**\n",
+    "\n",
     "We directly use this algorithm for the new MDP to find the optimal policy. "
    ]
   },
@@ -1159,9 +1175,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Comparison\n",
+    "----\n",
     "\n",
-    "#### Model-Based RL vs. Nonlinear MPC\n",
+    "<br>\n",
+    "\n",
+    "### **Part 5: Comparison between Model-Based RL & Nonlinear MPC**\n",
     "\n",
     "Let's compare the resulting RL policy with the nonlinear MPC we saw in chapter 5. "
    ]
