--- a/ex7_RL/7.2_mfrl.ipynb
+++ b/ex7_RL/7.2_mfrl.ipynb
@@ -23,7 +23,7 @@
     "  <!-- Row group 1 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"2\">Sampling</td>\n",
-    "    <td>Sampling from a stochastic Policy</td>\n",
+    "    <td>Example 1.1: Sampling from a stochastic Policy</td>\n",
     "  </tr>\n",
     "  <tr>\n",
     "  </tr>\n",
@@ -31,37 +31,37 @@
     "  <!-- Row group 2 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"4\">Monte-Carlo Method</td>\n",
-    "    <td>Implementation</td>\n",
+    "    <td>Example 2.1: Implementation</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Training Curve and Key Metrics</td>\n",
+    "    <td>Example 2.2: Training Curve and Key Metrics</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Simulation on a Hilly Terrain</td>\n",
+    "    <td>Example 2.3: Simulation on a Hilly Terrain</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Exploration vs. Exploitation</td>\n",
+    "    <td>Example 2.4: Exploration vs. Exploitation</td>\n",
     "  </tr>\n",
     "\n",
     "  <!-- Row group 3 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"3\">Q-Learning</td>\n",
-    "    <td>Implementation</td>\n",
+    "    <td>Example 3.1: Implementation</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Simulation on a Flat Terrain</td>\n",
+    "    <td>Example 3.2: Simulation on a Flat Terrain</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Simulation on a Hilly Terrain</td>\n",
+    "    <td>Example 3.3: Simulation on a Hilly Terrain</td>\n",
     "  </tr>\n",
     "\n",
     "  <!-- Row group 4 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"4\">Comparison I</td>\n",
-    "    <td>Fair Comparison & Statistical Evaluation in RL</td>\n",
+    "    <td>Example 4.1: Fair Comparison & Statistical Evaluation in RL</td>\n",
     "  </tr>\n",
     "  <tr>\n",
-    "    <td>Monte-Carlo Method vs. Q-Learning</td>\n",
+    "    <td>Example 4.2: Monte-Carlo Method vs. Q-Learning</td>\n",
     "  </tr>\n",
     "  <tr>\n",
     "  </tr>\n",
@@ -71,7 +71,7 @@
     "  <!-- Row group 4 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"1\">Comparison II</td>\n",
-    "    <td>Comparison of All Control and Learning Paradigms</td>\n",
+    "    <td>Example 5.1: Comparison of All Control and Learning Paradigms</td>\n",
     "  </tr>\n",
     "\n",
     "</table>\n",
@@ -217,7 +217,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "### **Sampling from a stochastic Policy: A Discrete CDF Approach**\n",
+    "### **Part 1: Sampling from a stochastic Policy: A Discrete CDF Approach**\n",
     "\n",
     "In reinforcement learning, an agent often follows a stochastic policy rather than a fully greedy one, i.e. a probability-mass function $\\pi(u|x)$ that assigns a weight to every action in the current state. An $\\varepsilon$-soft policy is one of the simplest case: with probability $1-\\varepsilon$ the agent takes the greedy action and with $\\varepsilon$ it explores the rest according to that distribution. Sampling from such a policy is crucial, without it the agent can’t keep a balance between exploration and exploitation, expecially in a on-policy RL method.\n",
     "\n",
@@ -441,7 +441,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "### **Monte-Carlo Method**\n",
+    "### **Part 2: Monte-Carlo Method**\n",
     "\n",
     "In the last section we learned how to draw actions from an $\\varepsilon$-soft stochastic policy. Based on that now we can further explore the model-free RL methods that engage shochastic policy to balance the exploration and exploitation. Most textbooks split reinforcement-learning algorithms that do not need an explicit model into a handful of archetypes – each updates the value (or policy) estimate in a different way.\n",
     "\n",
@@ -538,7 +538,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "#### **Implementation**\n",
+    "#### **Example 2.1: Implementation**\n",
     "\n",
     "Before we can roll out episodes, we must define the $\\varepsilon$-soft sampling policy, which can be formulated as:\n",
     "$$\n",
@@ -713,7 +713,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "#### **Training Curve and Key Metrics**\n",
+    "#### **Example 2.2: Training Curve and Key Metrics**\n",
     "\n",
     "When analysing a reinforcement-learning run we usually track a handful of standard metrics:\n",
     "\n",
@@ -884,7 +884,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "#### **Simulation on a Hilly Terrain**\n",
+    "#### **Example 2.3: Simulation on a Hilly Terrain**\n",
     "\n",
     "The figures above illustrate in the **flat-terrain scenario**. In addition, we can carry out the same training and simulation procedure on the under-actuated hilly terrain. **Here the input is constrained to the under-actuated case**, which means the car cannot generate enough kinetic energy in a single burst to crest the hill; instead it must swing back and forth several times to build momentum, making the task markedly more challenging. Run the training script below, inspect the resulting learning curves, and then launch a simulation to see how the converged policy performs in this tougher setting.\n"
    ]
@@ -966,7 +966,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "#### **Exploration vs. Exploitation**\n",
+    "#### **Example 2.4: Exploration vs. Exploitation**\n",
     "\n",
     "In model-free Reinforcement Learning, you have no prior knowledge about the system dynamcis or the transition property, so you will need some policy to conduxt some exploration on this. From there raise the fundamental trade-off between **exploration** (trying new actions to discover potentially better strategies) and **exploitation** (leveraging the current best-known policy to maximize reward). To manage this balance, we adopt an **$\\varepsilon$-soft policy**, where the agent chooses the best-known action with high probability $1 - \\varepsilon$, but with small probability $\\varepsilon$ it randomly explores other actions.\n",
     "\n",
@@ -1152,7 +1152,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "### **Q-Learning**\n",
+    "### **Part 3: Q-Learning**\n",
     "\n",
     "Q-learning is one of the most widely used **model-free reinforcement learning algorithms**, based on the *temporal-difference (TD)* learning paradigm. Unlike the Monte Carlo Reinforcement Learning method discussed earlier—which waits until the end of each episode to update value estimates—Q-learning performs **incremental updates** at every step based on the current state, action, reward, and the maximum expected future reward.\n",
     "\n",
@@ -1190,7 +1190,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "#### **Implementation**\n",
+    "#### **Example 3.1: Implementation**\n",
     "\n",
     "The `setup()` routine for **Q-learning** revolves around three core phases executed iteratively across episodes:\n",
     "\n",
@@ -1316,7 +1316,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "#### **Simulation on a Flat Terrain**\n",
+    "#### **Example 3.2: Simulation on a Flat Terrain**\n",
     "\n",
     "Similar to the Monte Carlo RL setup, we first train and simulate the agent on a flat terrain to establish a clean and ideal baseline. Notably, since Q-learning uses recursive Temporal-Difference updates, the learning signal (TD error) tends to have smaller variance, leading to more stable updates. This allows us to adopt a relatively higher learning rate, accelerating the convergence process without sacrificing stability."
    ]
@@ -1386,7 +1386,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "#### **Simulation on a Hilly Terrain**\n",
+    "#### **Example 3.3: Simulation on a Hilly Terrain**\n",
     "\n",
     "We likewise conduct training on the hilly terrain and visualize the simulation results:"
    ]
@@ -1466,7 +1466,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "### **Monte Carlo Method vs. Q-Learning**\n",
+    "### **Part 4: Monte Carlo Method vs. Q-Learning**\n",
     "\n",
     "In this section, we aim to empirically compare the performance of two fundamental model-free RL algorithms: Monte Carlo Reinforcement Learning and Q-learning. While both methods share the same objective—learning an optimal policy without explicit model knowledge—they differ in how value updates are performed: Monte Carlo method uses full-episode returns, whereas Q-learning adopts a recursive temporal-difference approach.\n"
    ]
@@ -1476,7 +1476,7 @@
    "id": "fe3dba07",
    "metadata": {},
    "source": [
-    "#### **Fair Comparison & Statistical Evaluation**\n",
+    "#### **Example 4.1: Fair Comparison & Statistical Evaluation**\n",
     "\n",
     "To ensure a fair and rigorous comparison, we follow best practices inspired by recent reproducibility efforts in RL research, particularly:\n",
     "\n",
@@ -1500,7 +1500,7 @@
    "id": "f5870af0",
    "metadata": {},
    "source": [
-    "#### **Experimental Design**\n",
+    "#### **Example 4.2: Experimental Design**\n",
     "\n",
     "The hyperparameter setting and chosen random seeds are specifed in the following code block. Under the setup mentioned above, both MCRL and Q-learning are trained and evaluated independently for each seed. The final results are visualized using reward curves, success rate evolution, and state-input trajectories under the learned policy."
    ]
@@ -1628,7 +1628,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "### **Comparison of Control and Reinforcement Learning Paradigms**\n",
+    "### **Part 5: Comparison of Control and Reinforcement Learning Paradigms**\n",
     "\n",
     "In the previous sections, we have explored three different paradigms for sequential decision-making: **model-based Control** (e.g., MPC), **model-based Reinforcement Learning** (e.g., Value Iteration, Policy Iteration, GPI), and **model-free Reinforcement Learning** (e.g., Monte Carlo method, Q-learning). Each of these methods offers distinct strengths and trade-offs, depending on the availability of system dynamics, the nature of the state and action spaces, and computational constraints. Below we provide a structured comparison across several key dimensions:\n",
     "\n",
